--- a/Servidor/bin/.gitignore
+++ b/Servidor/bin/.gitignore
@@ -1,3 +1,9 @@
 /BroadcastReceiver.class
 /Expression.class
+/MathResponse.class
+/ServerThread.class
+/Servidor.class
+/lib/
 /record.class
+/serverTest.class
+/Slave.class
