--- a/Cliente/.project
+++ b/Cliente/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>senac</name>
+	<name>Controler</name>
 	<comment></comment>
 	<projects>
 	</projects>
